--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -13,6 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="/assets/scripts/popup.js"></script>
     <script src="/assets/scripts/registerInterstitials.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <%- include('/fonts') %>
   </head>
   <body>
