Style flickity UI (buttons and dots)

--- a/src/sections/interventions.ejs
+++ b/src/sections/interventions.ejs
@@ -11,7 +11,7 @@ position: 7
 
   <div
     class="carousel"
-    data-flickity='{"contain": true, "cellAlign": "left", "pageDots": false}'
+    data-flickity='{"contain": true, "cellAlign": "left", "pageDots": true}'
   >
     <% interventions.interventions.forEach((intervention, i) => { %>
     <div
