--- a/src/sections/concepts.ejs
+++ b/src/sections/concepts.ejs
@@ -5,10 +5,7 @@ hideInNavigation: false
 ---
 
 <div class="concepts-container">
-  <div
-    class="carousel"
-    data-flickity='{"contain": true, "cellAlign": "left", "pageDots": false}'
-  >
+  <div class="carousel" data-flickity='{"contain": true, "cellAlign": "left" }'>
     <% concepts.concepts.forEach((concept, i)=> { %>
     <div class="carousel-cell concept" id="concept-<%= i _%>" tabindex="0">
       <h4 class="concept-title"><%= concept.conceptTitle %></h4>
