Don't cut off shadow

--- a/src/styles/partials/carousel.less
+++ b/src/styles/partials/carousel.less
@@ -7,7 +7,7 @@
 
   .carousel-cell {
     width: (@grid * 35);
-    height: 100%;
+    height: calc(100% - @grid);
     min-height: @grid * 30;
 
     // ensure shadow not cut off
