Changes from copy editor
https://docs.google.com/document/d/1UGNU4fuOBaW6ge8bDCfHkN6Fr4LPLwg6JZJ60EwotDc/edit?ts=6057e498

--- a/src/sections/concepts.ejs
+++ b/src/sections/concepts.ejs
@@ -24,7 +24,7 @@ hideInNavigation: false
     <% }) %>
   </div>
 
-  <a href="/share-concept" class="button">Add Yourself to these Examples</a>
+  <a href="/share-concept" class="button">Add Yourself to These Examples</a>
 </div>
 
 <p>
