--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -8,14 +8,13 @@ position: 2
   <div class="two-up imagery-dandelion-0">
     <p>No one knows what arts and culture will look like after the pandemic</p>
     <div>
-      <p>Sixty-three percent of creatives have become fully unemployed.</p>
+      <p>63 percent of creatives have become fully unemployed.</p>
 
-      <p>A third of museums say they are likely to close forever.</p>
+      <p>⅓ of museums say they are likely to close forever.</p>
 
       <p>
-        Black and Indigenous people have a
-        <strong>COVID-19 death rate of double or more</strong> than the death
-        rate of White people in the US.
+        The COVID-19 death rate of Black and Indigenous people is more than
+        twice the COVID-19 death rate of White people in the US.
       </p>
 
       <p>
@@ -24,13 +23,12 @@ position: 2
       </p>
 
       <p>
-        Around <strong>half of 1 percent</strong> of annual foundation giving
+        Around <strong>½ of 1 percent</strong> of annual foundation giving
         directly supports women and girls of color.
       </p>
 
       <p>
-        And less than <strong>half</strong> of 1 percent goes to Native
-        Americans.
+        And less than <strong>½</strong> of 1 percent goes to Native Americans.
       </p>
 
       <p>
@@ -52,7 +50,7 @@ position: 2
         <a href="https://ebprec.org/" target="_blank" rel="noopener noreferrer"
           ><strong>permanently affordable space</strong></a
         >
-        in Oakland, places culture at the center of the work.
+        in Oakland places culture at the center of the work.
       </p>
       <p>
         The first
@@ -154,7 +152,7 @@ position: 2
   <div class="two-up right imagery-dandelion-3">
     <div>
       <p>
-        What do a <strong>mutual aid networks</strong>,<br />
+        What do <strong>mutual aid networks</strong>,<br />
         <strong>worker co-ops</strong>,<br />
         <strong>community land trusts</strong>,<br />
         <strong>participatory budgeting</strong>,<br />
@@ -174,15 +172,13 @@ position: 2
     </p>
     <div>
       <p>
-        This emergent movement goes by many names &mdash;
-        <small
-          >economic democracy, new economy, regenerative economics, degrowth,
-          the commons, local community economic development, democratic
-          socialism, just transition, dual power, liberation economy</small
-        >
-        &mdash; but internationally, it is known as the Social and Solidarity
-        Economy, or Solidarity Economy for short. It provides resilience against
-        crisis and has lasting impact when supported as a holistic system.
+        This emergent movement goes by many names &mdash; economic democracy,
+        new economy, regenerative economics, degrowth, the commons, local
+        community economic development, democratic socialism, just transition,
+        dual power, liberation economy &mdash; but internationally, it is known
+        as the Social and Solidarity Economy, or Solidarity Economy for short.
+        It provides resilience against crisis and has lasting impact when
+        supported as a holistic system.
       </p>
     </div>
   </div>
@@ -199,7 +195,7 @@ position: 2
         Courage”. Study toward action.
       </p>
       <p>
-        Find your local credit union, worker co-op, and time bank, and join it.
+        Find your local credit union, worker co-op, or time bank, and join it.
       </p>
       <p>Make media about this work: songs, posters, memes, and stories.</p>
       <p>Make gifts and loans of time, art, and money to seed these groups.</p>
