--- a/src/sections/interventions.ejs
+++ b/src/sections/interventions.ejs
@@ -5,10 +5,6 @@ position: 7
 ---
 
 <div class="interventions-container">
-  <a href="/share-example" class="button"
-    >Add Yourself to this List of Examples</a
-  >
-
   <div
     class="carousel"
     data-flickity='{"contain": true, "cellAlign": "left", "pageDots": true}'
@@ -31,4 +27,6 @@ position: 7
     </div>
     <% }) %>
   </div>
+
+  <a href="/share-example" class="button">Add Yourself to These Examples</a>
 </div>
