--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -1,9 +1,22 @@
 <div class="section-report">
   <div class="links">
-    <a href="#" download data-use-interstitial>Download the Full Report</a>
-    <a href="#" download data-use-interstitial>Download the Action Checklist</a>
-    <a href="#" download data-use-interstitial
-      >Download the Executive Summary</a
+    <a
+      href="/assets/downloads/solidarity-not-charity_full-report.pdf"
+      download
+      data-use-interstitial
+      >Download the Full Report in Color</a
+    >
+    <a
+      href="/assets/downloads/solidarity-not-charity_summary-checklist.pdf"
+      download
+      data-use-interstitial
+      >Download the Action Checklist</a
+    >
+    <a
+      href="/assets/downloads/solidarity-not-charity_full-report_PRINT.pdf"
+      download
+      data-use-interstitial
+      >Download the Full Report in Black and White</a
     >
   </div>
   <p>
