--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -18,7 +18,7 @@
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <%- include('/fonts') %>
+    <%- include('/fonts') %> <%- include('/analytics') %>
   </head>
   <body>
     <%- include('/popup') %> <%- content %>
