--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -16,7 +16,7 @@
       href="/assets/downloads/solidarity-not-charity_full-report_PRINT.pdf"
       download
       data-use-interstitial
-      >Download the Full Report in Black and White</a
+      >Download the Full Report in B&W</a
     >
   </div>
   <p>
