Add new collection reusing same sectional layout

--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="main-nav">
   <ul>
-    <% collections.section.filter(section=>
+    <% collections[collectionName].filter(section=>
     !section.data.hideInNavigation).forEach((section)=> { %>
     <li>
       <a href="#<%= section.fileSlug %>"> <%= section.data.title %> </a>
