--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,10 +3,4 @@ layout: default
 permalink: /
 ---
 
-<%- include('/nav') %>
-
-<main>
-  <% collections.section.forEach((section) => { %>
-  <section id="<%- section.fileSlug %>"><%- section.templateContent %></section>
-  <% }) %>
-</main>
+<%- include('/sectionalLayout', {collectionName: 'home' }) %>
