study/about section including rotating text

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -17,3 +17,5 @@
 @import './sections/interventions.less';
 @import './sections/concepts.less';
 @import './sections/examples.less';
+
+@import './study/about.less';
