--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,6 +7,7 @@
 @import './partials/carousel.less';
 @import './partials/report.less';
 @import './partials/popup.less';
+@import './partials/fridays.less';
 
 @import './page-countdown.less';
 
@@ -20,3 +21,4 @@
 
 @import './study/about.less';
 @import './study/live.less';
+@import './study/fridays.less';
