Made cohort note editable

--- a/src/study/fridays.ejs
+++ b/src/study/fridays.ejs
@@ -8,27 +8,11 @@ position: 3
   <p class="intro">
     We will gather for 1 hour for a <strong>Public Talk + Experience</strong> on
     Fridays from 12-1pm EST and then the Study-into-Action cohort<a
-      href="#cohort-note"
+      href="#fridays-cohort-note"
       ><sup>*</sup></a
     >
     continues into facilitated break-out groups 1-2pm EST.
   </p>
 
   <%- include('/fridays') %>
-
-  <p id="cohort-note" class="cohort-note">
-    <small>
-      *The Phase 1 cohort was created by nomination only due to limited capacity
-      -- this will change in future iterations. If you would like to learn about
-      the solidarity economy right now, we suggest that everyone reads these
-      texts and attends Economics for Emancipation. Culture-bearers and creators
-      might want to attend: AntiCapitalism for Artists, Architecture Beyond
-      Capitalism, Dark Study, Dark Matter University, Artists Dismantling
-      Capitalism, and the School of Art, Culture, and Resistance. Grantmakers
-      might want to attend workshops and hire: Nwamaka Agbo, Sustainable
-      Economies Law Center, Justice Funders, Resource Generation, Generative
-      Somatics, Solidaire, Chordata Capital, New Economy Coalition, and USSEN,
-      to practice solidarity in grantmaking. Contact us for more options.
-    </small>
-  </p>
 </div>
