--- a/src/study/fridays.ejs
+++ b/src/study/fridays.ejs
@@ -4,6 +4,7 @@ hideInNavigation: false
 position: 3
 ---
 
+<h2>Fridays</h2>
 <div class="section-fridays">
   <p class="intro">
     We will gather for 1 hour for a <strong>Public Talk + Experience</strong> on
