--- a/src/_includes/sectionalLayout.ejs
+++ b/src/_includes/sectionalLayout.ejs
@@ -1,4 +1,4 @@
-<%- include('/nav', { collectionName }) %>
+<%- include('/nav', { collectionName, extraNavLinks }) %>
 
 <main>
   <% collections[collectionName].forEach((section)=> { %>
