--- a/src/study.ejs
+++ b/src/study.ejs
@@ -3,4 +3,5 @@ layout: default
 permalink: /study/
 ---
 
-<%- include('/sectionalLayout', {collectionName: 'study' }) %>
+<%- include('/sectionalLayout', {collectionName: 'study', extraNavLinks: [{href:
+'/', isExternal: false, text: 'Report'}] }) %>
