--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -18,6 +18,7 @@
       data-use-interstitial
       >Download the Full Report in B&W</a
     >
+    <a href="/study">Study</a>
   </div>
   <p>
     This report, commissioned by Grantmakers in the Arts, is about the ways that
