--- a/src/styles/study/about.less
+++ b/src/styles/study/about.less
@@ -1,10 +1,21 @@
 @import '../variables/color.less';
+@import '../variables/typography.less';
 
 section#about {
+  .bigText() {
+    font-family: @font-family-serif;
+    .font-size-large();
+    // font-weight: @font-weight-bold;
+  }
+
   #concept {
     @color: @font-color-base;
     border-bottom: 1px dashed @color;
     font-style: normal;
     cursor: help;
+  }
+
+  p {
+    .bigText();
   }
 }
