October 01 should be October 1st

--- a/src/_includes/fridays.ejs
+++ b/src/_includes/fridays.ejs
@@ -4,7 +4,7 @@
   <div class="event">
     <div class="heading-line">
       <div class="event-time">
-        <%= formatDate(toEst(event.data.date), "EEEE, MMMM dd 'from' h") %>-<%=
+        <%= formatDate(toEst(event.data.date), "EEEE, MMMM do 'from' h") %>-<%=
         formatDate(toEst(event.data.endDate), 'h bbbb zzz' ) %>
       </div>
       <% if (event.data.cohortOnly) { %>
