--- a/src/study/value-flow.ejs
+++ b/src/study/value-flow.ejs
@@ -6,10 +6,12 @@ position: 6
 
 <h2>Value Flow</h2>
 
-<iframe
-  src="https://opencollective.com/embed/artcoop/donate?hideHeader=true"
-  style="width: 100%; min-height: 100vh"
-></iframe>
+<p class="large-text">
+  We are incubating a cooperative model of study. We aim to become
+  <strong>socially and financially self-determined</strong> and invite you to
+  support us in this effort with gifts of time, money, art, and open-source
+  code. Any surplus from Phase 1 will support Phase 2 and 3 of our work.
+</p>
 
 <div class="value-flow-card">
   <div class="links">
@@ -17,7 +19,10 @@ position: 6
       href="mailto:CulturalEconomyWeWant@gmail.com?subject=gift%20time%20%2F%20volunteer"
       >Give Time</a
     >
-    <a href="#">Give Art, Media, + Culture</a>
+    <a
+      href="mailto:culturaleconomywewant@gmail.com?subject=I%20want%20to%20make%20Media%20for%20the%20Solidarity%20Economy"
+      >Give Art, Media, + Culture</a
+    >
     <a href="https://github.com/opencollective" target="_blank"
       >Give Open Source Code</a
     >
@@ -31,3 +36,8 @@ position: 6
     code. Any surplus from Phase 1 will support Phase 2 and 3 of our work.
   </p>
 </div>
+
+<iframe
+  src="https://opencollective.com/embed/artcoop/donate?hideHeader=true"
+  style="width: 100%; min-height: 100vh"
+></iframe>
