Better oc embed sizing

--- a/src/study/value-flow.ejs
+++ b/src/study/value-flow.ejs
@@ -38,6 +38,6 @@ position: 6
 </div>
 
 <iframe
+  class="oc-embed"
   src="https://opencollective.com/embed/artcoop/donate?hideHeader=true"
-  style="width: 100%; min-height: 100vh"
 ></iframe>
