make concept bigger so it POPs

--- a/src/styles/study/about.less
+++ b/src/styles/study/about.less
@@ -14,6 +14,7 @@ section#about {
     border-bottom: 1px dashed @color;
     font-style: normal;
     cursor: help;
+    font-size: @font-size-larger;
   }
 
   a.download-button {
