Make study button black

--- a/src/styles/partials/report.less
+++ b/src/styles/partials/report.less
@@ -33,6 +33,9 @@
     a:nth-of-type(3n + 3) {
       .buttonStyledLink(@accent-color-yellow);
     }
+    a.study {
+      .buttonStyledLink(@font-color-base);
+    }
   }
 
   @media (max-width: @mobile-width) {
