--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -33,6 +33,8 @@
         });
       }
     </script>
+
+    <%- include('/favicon') %>
   </head>
   <body>
     <%- include('/popup') %> <%- content %>
