--- a/src/styles/study/about.less
+++ b/src/styles/study/about.less
@@ -1,8 +1,23 @@
 @import '../variables/color.less';
 @import '../variables/typography.less';
 @import '../variables/buttons.less';
+@import '../variables/sizing.less';
 
 section#about {
+  h1 {
+    position: relative;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: @grid * 12;
+      width: @grid * 12;
+      margin-right: @grid;
+      background: url('/assets/images/logo.png') no-repeat center;
+      background-size: contain;
+      vertical-align: middle;
+    }
+  }
   .bigText() {
     font-family: @font-family-serif;
     .font-size-large();
