OC background color

--- a/src/study/value-flow.ejs
+++ b/src/study/value-flow.ejs
@@ -39,5 +39,5 @@ position: 6
 
 <iframe
   class="oc-embed"
-  src="https://opencollective.com/embed/study-into-action/donate?hideHeader=true"
+  src="https://opencollective.com/embed/study-into-action/donate?hideHeader=true&backgroundColor=eee8f6"
 ></iframe>
