--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /
+permalink: /report/
 ---
 
 <%- include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [{
