Update links to report page

--- a/src/share-concept.ejs
+++ b/src/share-concept.ejs
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <main>
-  <a href="/#concepts">Back to site</a>
+  <a href="/report/#concepts">Back to site</a>
 
   <form
     method="POST"
