Use Vimeo event instead of video embed

--- a/src/study/live.ejs
+++ b/src/study/live.ejs
@@ -6,9 +6,10 @@ position: 2
 
 <div class="section-live">
   <div class="video-container">
-    <%- include('/vimeo', {id: '589935467' }) %>
+    <iframe src="https://vimeo.com/event/1109941/embed"
+      width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
-
+  
   <div class="chat-container">
     <iframe
       src="https://vimeo.com/event/1109941/chat/"
