--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,5 +4,5 @@ permalink: /report/
 ---
 
 <%- include('/sectionalLayout', { collectionName: 'home', extraNavLinks: [{
-href: '/study', isExternal: false, text: 'Study' },{ href:
-'https://www.giarts.org/', isExternal: true, text: 'GIA' }] }) %>
+href: '/study', isExternal: false, text: 'Study', isCta: true },{ href:
+'https://www.giarts.org/', isExternal: true, text: 'GIA', isCta: false }] }) %>
