--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -39,6 +39,10 @@
         }
       }
 
+      &.cta a {
+        color: @accent-color-jade;
+      }
+
       a {
         display: block;
         padding: 0 @grid;
