--- a/src/study.ejs
+++ b/src/study.ejs
@@ -4,4 +4,4 @@ permalink: /study/
 ---
 
 <%- include('/sectionalLayout', {collectionName: 'study', extraNavLinks: [{href:
-'/report', isExternal: false, text: 'Report'}] }) %>
+'/report', isExternal: false, text: 'Report', isCta: true}] }) %>
