--- a/src/styles/partials/fridays.less
+++ b/src/styles/partials/fridays.less
@@ -17,13 +17,20 @@
   }
 
   .rsvp-link,
-  .cohort-only {
+  .cohort-only,
+  .recording-link {
     font-weight: @font-weight-normal;
+  }
+
+  .rsvp-link,
+  .recording-link {
+    text-transform: uppercase;
   }
 
   .cohort-only,
   .rsvp-link,
-  .event-time {
+  .event-time,
+  .recording-link {
     display: inline;
   }
 
