Define common styles and typography

--- a/src/styles/markdown-containers.less
+++ b/src/styles/markdown-containers.less
@@ -6,14 +6,14 @@
   break-inside: avoid;
 }
 
-.columns {
-  margin-top: (@grid * 2);
+// .columns {
+//   margin-top: (@grid * 2);
 
-  column-width: (@grid * 20);
-  column-gap: (@grid * 4);
+//   column-width: (@grid * 20);
+//   column-gap: (@grid * 4);
 
-  & > *:last-child {
-    // Try to force columns to balnce to the left
-    padding-bottom: 20px;
-  }
-}
+//   & > *:last-child {
+//     // Try to force columns to balnce to the left
+//     padding-bottom: 20px;
+//   }
+// }
