--- a/src/styles/variables/buttons.less
+++ b/src/styles/variables/buttons.less
@@ -1,6 +1,6 @@
 .buttonCommon(@background-color) {
   display: inline-block;
-  padding: (@grid / 2) @grid;
+  padding: 12px 24px;
   background-color: @background-color;
   color: @background-color-lighter;
   text-align: center;
