--- a/src/styles/variables/color.less
+++ b/src/styles/variables/color.less
@@ -1,18 +1,8 @@
-@font-color-base: #212121;
-@background-color-base: #eee8f6;
+@font-color-base: #141415;
 @background-color-lighter: #ffffff;
-@background-color-gray: #f1f1f1;
+@background-color-base: #ebfdfe66;
 
-@accent-color-red: #eb5350;
-@accent-color-teal: #00b5a4;
-@accent-color-orange: #d47217;
-@accent-color-yellow: #cdb222;
-@accent-color-jade: #00b877;
-@accent-color-purple: #7f56f4;
-
-@accent-color-red-light: #ff8785;
-@accent-color-teal-light: #a1e1db;
-@accent-color-orange-light: #ffb775;
-@accent-color-yellow-light: #ffe978;
-@accent-color-jade-light: #c3ffd1;
-@accent-color-purple-light: #ccbaff;
+@color-dark-green: #044f54;
+@color-red: #ff3d22;
+@color-pumpkin: #ffa101;
+@color-sand: #fec627;
