--- a/src/_includes/fonts.ejs
+++ b/src/_includes/fonts.ejs
@@ -1,8 +1,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
 
 <% [
-'https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap',
-'https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap']
+'https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,500;0,600;0,700;1,500;1,600;1,700&display=swap']
 .forEach((href) => { %>
 <link
   rel="preload"
