--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -3,15 +3,10 @@
 @import './variables/sizing.less';
 @import './variables/buttons.less';
 
-@import './base-forms.less';
-
 // Typography
 
 body {
-  font-family: @font-family-sans;
-  font-weight: @font-weight-normal;
-
-  .font-size-base();
+  .base-typography();
 
   color: @font-color-base;
   background-color: @background-color-base;
@@ -20,46 +15,23 @@ body {
 }
 
 h1 {
-  font-family: @font-family-sans;
-  font-weight: @font-weight-bold;
-  .font-size-larger();
-  margin: @grid 0;
+  .heading-h1();
+  color: @color-dark-green;
 }
 
 h2 {
-  font-family: @font-family-serif;
-  font-weight: @font-weight-bold;
-  .font-size-larger();
-  margin: (@grid * 2) 0;
-}
-
-h3 {
-  font-family: @font-family-sans;
-  font-weight: @font-weight-bold;
-  .font-size-large();
-  margin: @grid 0;
-}
-
-h4 {
-  .font-size-large();
-}
-
-blockquote {
-  font-family: @font-family-serif;
-  font-weight: @font-weight-normal;
-  font-style: italic;
-  .font-size-large();
+  .heading-h2();
 }
 
 a {
-  @link-color: @accent-color-jade;
+  // @link-color: @accent-color-jade;
 
-  color: @link-color;
-  text-decoration: inherit;
+  // color: @link-color;
+  // text-decoration: inherit;
 
-  &:hover {
-    border-bottom: 1px dashed @link-color;
-  }
+  // &:hover {
+  //   border-bottom: 1px dashed @link-color;
+  // }
 }
 
 main {
@@ -67,7 +39,7 @@ main {
 }
 
 p {
-  margin: (@grid * 2) 0;
+  margin: 1em 0;
 }
 
 a.button {
@@ -81,7 +53,7 @@ table {
 
   td,
   th {
-    padding: @grid @grid @grid 0;
-    border-bottom: 1px dashed @font-color-base;
+    padding: 1em 1em 1em 0;
+    border-bottom: 1px solid @font-color-base;
   }
 }
