Initial version of hero section

--- a/src/styles/variables/buttons.less
+++ b/src/styles/variables/buttons.less
@@ -4,6 +4,8 @@
   background-color: @background-color;
   color: @background-color-lighter;
   text-align: center;
+  border-radius: 100px;
+  text-decoration: none;
 
   &:hover {
     background-color: tint(@background-color, 20%);
