--- a/src/styles/variables/typography.less
+++ b/src/styles/variables/typography.less
@@ -16,6 +16,7 @@
 .heading-h1 {
   line-height: 60px;
   font-size: 52px;
+  font-weight: @font-weight-regular;
 }
 
 .heading-h2 {
@@ -31,7 +32,6 @@
 .paragraph-large {
   line-height: 34px;
   font-size: 24px;
-  font-weight: 24px;
 }
 
 .paragraph-mid {
