--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -17,6 +17,7 @@ html {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: @layout-grid-gutter;
+  row-gap: @layout-grid-margin;
 }
 
 .content-container() {
